Finzor loding issue optimized and product image changed.

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                         <video class="video_ani" poster="assets/images/promo-poster-lg.webp" autoplay loop playsinline muted
                             id="myVideoDesk" width="100%">
                             <source src="./assets/audio/API-development.mp4" type="video/mp4" id="sourceElementPromo">
-                        </video>
+                        </video> 
                     </div>
                   </div>
               </div>
@@ -778,34 +778,39 @@
           <div class="fz_product_right">
            <div class="fz_product_images">
             <div class="fz_product_image">
-              <video class="video_ani" poster="assets/images/promo-poster-lg.webp" autoplay loop playsinline muted
+              <!-- <video class="video_ani" poster="assets/images/promo-poster-lg.webp" autoplay loop playsinline muted
                   id="myVideoDesk" width="100%">
                   <source src="./assets/audio/API-development.mp4" type="video/mp4" id="sourceElementPromo">
-              </video>
+              </video> -->
+              <div id="finbankz-product" class="product-img visual-desktop hidden lg:block w-1454 h-1258 relative z-[1]"></div> 
             </div>
             <div class="fz_product_image">
-              <video class="video_ani" poster="assets/images/promo-poster-lg.webp" autoplay loop playsinline muted
+              <!-- <video class="video_ani" poster="assets/images/promo-poster-lg.webp" autoplay loop playsinline muted
                   id="myVideoDesk" width="100%">
                   <source src="./assets/audio/Fintech.mp4" type="video/mp4" id="sourceElementPromo">
-              </video>
+              </video> -->
+              <div id="upizor-product" class="product-img visual-desktop hidden lg:block w-1454 h-1258 relative z-[1]"></div> 
             </div>
             <div class="fz_product_image">
-              <video class="video_ani" poster="assets/images/promo-poster-lg.webp" autoplay loop playsinline muted
+              <!-- <video class="video_ani" poster="assets/images/promo-poster-lg.webp" autoplay loop playsinline muted
                   id="myVideoDesk" width="100%">
                   <source src="./assets/audio/Financial-Statistics.mp4" type="video/mp4" id="sourceElementPromo">
-              </video>
+              </video> -->
+              <div id="finops360-product" class="product-img visual-desktop hidden lg:block w-1454 h-1258 relative z-[1]"></div> 
             </div>
             <div class="fz_product_image">
-              <video class="video_ani" poster="assets/images/promo-poster-lg.webp" autoplay loop playsinline muted
+              <!-- <video class="video_ani" poster="assets/images/promo-poster-lg.webp" autoplay loop playsinline muted
                   id="myVideoDesk" width="100%">
                   <source src="./assets/audio/Business-Analysis.mp4" type="video/mp4" id="sourceElementPromo">
-              </video>
+              </video> -->
+              <div id="finzro-product" class="product-img visual-desktop hidden lg:block w-1454 h-1258 relative z-[1]"></div> 
             </div>
             <div class="fz_product_image">
-              <video class="video_ani" poster="assets/images/promo-poster-lg.webp" autoplay loop playsinline muted
+              <!-- <video class="video_ani" poster="assets/images/promo-poster-lg.webp" autoplay loop playsinline muted
                   id="myVideoDesk" width="100%">
                   <source src="./assets/audio/Fintech-video.mp4" type="video/mp4" id="sourceElementPromo">
-              </video>
+              </video> -->
+              <div id="finlyticz-product" class="product-img visual-desktop hidden lg:block w-1454 h-1258 relative z-[1]"></div> 
             </div>
            </div>
           </div>
