resposnsive and header update

--- a/index.html
+++ b/index.html
@@ -885,11 +885,11 @@
                                 src: "https://lottie.host/806d5cd0-e468-4e6f-be32-6d8483fcf675/IbbWORgAvg.json", // replace with your .lottie or .json file URL
                               });
                             </script> -->
-                            <div>
+                            <div class="item-pay-text">
                               <h3>AI Tools</h3>
                               <p>Enhance CX, efficiency, and security via automation, predictive analytics, and fraud detection.</p>
                               <a href="#">Read More</a>
-                              <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/core-icon1.svg" alt="arrow"></div>
+                              <div class="bottom-img"><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/core-icon1.svg" alt="arrow"></div>
                             </div>
                           </div>
                           <div class="item-pay">
@@ -931,11 +931,11 @@
                                     src: "./assets/audio/animate1.lottie", // replace with your .lottie or .json file URL
                                   });
                                 </script> -->
-                            <div>
+                            <div class="item-pay-text">
                               <h3>Payments</h3>
                               <p>Complete payments lifecycle with Cloud-Native, XAI, API-enabled, and end-to-end payment tech.</p>
                               <a href="#">Read More</a>
-                              <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/core-icon2.svg" alt="arrow"></div>
+                              <div class="bottom-img"><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/core-icon2.svg" alt="arrow"></div>
                             </div>
                           </div>
                           <div class="item-pay">
@@ -977,11 +977,11 @@
                                 src: "https://lottie.host/80e91db7-e913-40b6-80ec-601e25c56dbe/ZTERmF3AI2.lottie", // replace with your .lottie or .json file URL
                               });
                             </script> -->
-                            <div>
+                            <div class="item-pay-text">
                               <h3>Cloud Based Solutions</h3>
                               <p>Scalable, secure, cost-efficient CBS with disaster recovery and multi-tenant support.</p>
                               <a href="#">Read More</a>
-                              <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/core-icon3.svg" alt="arrow"></div>
+                              <div class="bottom-img"><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/core-icon3.svg" alt="arrow"></div>
                             </div>
                           </div>
                         </div>
@@ -1088,11 +1088,11 @@
                               src: "https://lottie.host/9e385624-dadd-4f01-9700-8de395d3ad88/l0pDpmFB6f.lottie", // replace with your .lottie or .json file URL
                             });
                           </script> -->
-                          <div>
+                          <div class="item-pay-text">
                             <h3>High Scalability</h3>
                             <p>Ensures reliable payments with optimized infrastructure, cloud tech, and seamless transactions.</p>
                             <a href="#">Read More</a>
-                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/payment-icon1.svg" alt="arrow"></div>
+                            <div class="bottom-img"><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/payment-icon1.svg" alt="arrow"></div>
                           </div>
                         </div>
                         <div class="item-pay">
@@ -1134,11 +1134,11 @@
                                 src: "https://lottie.host/1c6aa701-a26e-42e1-afbb-ded64d72b573/ymNhWF8WcN.lottie", // replace with your .lottie or .json file URL
                               });
                             </script> -->
-                          <div>
+                          <div class="item-pay-text">
                             <h3>Fraud Prevention</h3>
                             <p>AI-driven fraud detection ensures secure transactions, anomaly alerts, and advanced tools.</p>
                             <a href="#">Read More</a>
-                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/payment-icon2.svg" alt="arrow"></div>
+                            <div class="bottom-img"><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/payment-icon2.svg" alt="arrow"></div>
                           </div>
                         </div>
                         <div class="item-pay">
@@ -1178,11 +1178,11 @@
                               src: "https://lottie.host/034bcd29-b2c5-47db-94c0-10f58c191c9d/Xwl9RCtej7.lottie", // replace with your .lottie or .json file URL
                             });
                           </script> -->
-                          <div>
+                          <div class="item-pay-text">
                             <h3>Developer-Friendly APIs</h3>
                             <p>Easy APIs for seamless payment integration, supported by docs, SDKs, and customization tools.</p>
                             <a href="#">Read More</a>
-                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/payment-icon3.svg" alt="arrow"></div>
+                            <div class="bottom-img"><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/payment-icon3.svg" alt="arrow"></div>
                           </div>
                         </div>
                       </div>
@@ -1230,11 +1230,11 @@
                                 src: "https://lottie.host/29b42b8e-8ace-4a81-b534-437c8858b7a9/VIu7LvrHGc.lottie", // replace with your .lottie or .json file URL
                               });
                             </script> -->
-                          <div>
+                          <div class="item-pay-text">
                             <h3>Multichannel Banking</h3>
                             <p>Access banking across platforms with consistent and unified user experiences.</p>
                             <a href="#">Read More</a>
-                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/neo-icon1.svg" alt="arrow"></div>
+                            <div class="bottom-img"><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/neo-icon1.svg" alt="arrow"></div>
                           </div>
                         </div>
                         <div class="item-pay">
@@ -1276,11 +1276,11 @@
                                 src: "https://lottie.host/ca03b85c-efe9-4ee1-995b-031f49cab02f/1Cwvdrg8tk.lottie", // replace with your .lottie or .json file URL
                               });
                             </script> -->
-                          <div>
+                          <div class="item-pay-text">
                             <h3>Smart Insights & Alerts</h3>
                             <p>AI analyzes spending, gives savings advice, and offers instant transaction and balance alerts.</p>
                             <a href="#">Read More</a>
-                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/neo-icon2.svg" alt="arrow"></div>
+                            <div class="bottom-img"><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/neo-icon2.svg" alt="arrow"></div>
                           </div>
                         </div>
                         <div class="item-pay">
@@ -1320,11 +1320,11 @@
                               src: "https://lottie.host/dbf03fd1-1930-4914-be81-7562d03e28c1/jdyNwk6XdT.lottie", // replace with your .lottie or .json file URL
                             });
                           </script> -->
-                          <div>
+                          <div class="item-pay-text">
                             <h3>Round-the-Clock Support</h3>
                             <p>24/7 customer support via chatbots and live agents for quick issue resolution.</p>
                             <a href="#">Read More</a>
-                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/neo-icon3.svg" alt="arrow"></div>
+                            <div class="bottom-img"><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/neo-icon3.svg" alt="arrow"></div>
                           </div>
                         </div>
                       </div>
@@ -1372,11 +1372,11 @@
                               src: "https://lottie.host/a815412c-a217-4c1a-b226-463ac353004e/KE94QpJpNz.lottie", // replace with your .lottie or .json file URL
                             });
                           </script> -->
-                          <div>
+                          <div class="item-pay-text">
                             <h3>Interbank Instant Transfers</h3>
                             <p>Real-time UPI transfers eliminate delays, ensuring fast and secure payments.</p>
                             <a href="#">Read More</a>
-                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/upi-icon1.svg" alt="arrow"></div>
+                            <div class="bottom-img"><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/upi-icon1.svg" alt="arrow"></div>
                           </div>
                         </div>
                         <div class="item-pay">
@@ -1416,11 +1416,11 @@
                               src: "https://lottie.host/65253b0d-8900-475a-abc3-7a3ea9203c54/jBAoU9gHEr.lottie", // replace with your .lottie or .json file URL
                             });
                           </script> -->
-                          <div>
+                          <div class="item-pay-text">
                             <h3>QR Scan & Pay</h3>
                             <p>Simple QR-based payments allow instant, secure UPI transactions for merchants and customers.</p>
                             <a href="#">Read More</a>
-                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/upi-icon2.svg" alt="arrow"></div>
+                            <div class="bottom-img"><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/upi-icon2.svg" alt="arrow"></div>
                           </div>
                         </div>
                         <div class="item-pay">
@@ -1460,11 +1460,11 @@
                               src: "https://lottie.host/3b9d8995-d918-4ae2-ab9f-7f60e94f4f26/OJZj1gB8e6.lottie", // replace with your .lottie or .json file URL
                             });
                           </script> -->
-                          <div>
+                          <div class="item-pay-text">
                             <h3>Scheduled Payments</h3>
                             <p>Automate bills, loans, and subscriptions to ensure hassle-free payments and manage cash flow.</p>
                             <a href="#">Read More</a>
-                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/upi-icon3.svg" alt="arrow"></div>
+                            <div class="bottom-img"><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/upi-icon3.svg" alt="arrow"></div>
                           </div>
                         </div>
                       </div>
