footer bg added

--- a/index.html
+++ b/index.html
@@ -239,6 +239,9 @@
             z-index: 99999;
             background: url('./assets/images/finzor-loading.gif') center no-repeat #000;
           }
+          .footer-bg img {
+                width: 100%;
+            }
         </style>
     </head>
     <body>
@@ -2283,6 +2286,9 @@
               </div>
           </div>
         </footer>
+        <div class="footer-bg">
+          <img src="./assets/images/footer-bg.gif" alt="footer-bg"/>
+        </div>
         <div class="chat-bot">
           <img src="assets/images/FinzorchatBot.gif" alt="chat-bot">
         </div>
