empowering text changed issue

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                     <div class="hash_bar">#</div>
                     <!-- <h3>Empowering <br> Financial Journey <br> with Trust</h3>  -->
                     
-                    <h3 class="text" style="display: none;">Empowering Financial Journey with Trust</h3>
+                    <h3 class="product_intro_text" style="display: none;">Empowering Financial Journey with Trust</h3>
                     
                     <h3 class="typing_text-heading">
                       <span class="hash_content"></span>
