--- a/index.html
+++ b/index.html
@@ -227,8 +227,15 @@
               justify-content: start;
           }
 
+          @media screen and (max-width: 991px) {
+            div#faq-animate{
+              display: block;
+            }
+          }
+
           div#faq-animate svg {
               width: auto!important;
+
           }
           #page-loader {
             position: fixed;
