--- a/index.html
+++ b/index.html
@@ -313,17 +313,14 @@
                       <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Products</a>
+                      <a class="nav-link" href="#">Products & Services</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                       <a class="nav-link" href="#">Payments</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Insights</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                       <a class="nav-link" href="#">Company</a>
                     </li>
@@ -2247,9 +2244,6 @@
                           </li>
                           <li>
                               <a href="#" title="Contact us">Contact us</a>
-                          </li>
-                          <li>
-                              <a href="#" title="Carrers">Carrers</a>
                           </li>
                           <li>
                               <a href="#" title="FAQ’s">FAQ’s</a>
