hero section animation updated image added.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
           /* opacity: 0.5; */
           display: none;
         }
-        #fz-hero-bg::before{
+        /* #fz-hero-bg::before{
           display: none;
-        }
+        } */
         /* section#fz-hero-bg:after {
           content: "";
           background: url(./assets/images/hero-bg.jpg) no-repeat;
