--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                       <a class="nav-link" href="#">Company</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Contact Us</a>
+                      <a class="nav-link" href="./contact_us.html">Contact Us</a>
                     </li>
                   </ul>
                   <div class="d-flex fz_sigin">
